# cloudflare-speed-cli

./: .dockerignore  Cargo.toml  Dockerfile  README.md  dist-workspace.toml  install.sh
.github/workflows/: docker.yml  release.yml
images/: lib.typ
src/: cli.rs  main.rs  metrics.rs  model.rs  network.rs  stats.rs  storage.rs
src/engine/: cloudflare.rs  dns.rs  ip_comparison.rs  latency.rs  mod.rs  network_bind.rs  throughput.rs  turn_udp.rs
src/tui/: charts.rs  mod.rs  widgets.rs
