[package]
name = "cloudflare-speed-cli_"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bytes = "1.9.0"
clap = { version = "4.5.23", features = ["derive"] }
crossterm = { version = "0.28.1", optional = true, features = ["event-stream"] }
dirs = "5.0.1"
futures = "0.3.31"
hdrhistogram = "7.5.4"
humantime-serde = "1.1.1"
humantime = "2.1.0"
rand = "0.8.5"
ratatui = { version = "0.29.0", optional = true, default-features = false, features = ["crossterm"] }
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "http2", "gzip", "brotli", "deflate", "json", "stream"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
time = { version = "0.3.37", features = ["formatting", "macros", "local-offset"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "signal", "time", "sync", "net"] }

[features]
default = []
tui = ["dep:ratatui", "dep:crossterm"]
